--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "backend",
+	"type": "module",
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
@@ -13,6 +14,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.5",
 		"express": "^4.21.1",
-		"mongoose": "^8.8.0"
+		"mongoose": "^8.8.0",
+		"nanoid": "^5.0.8"
 	}
 }
