--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,16 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+		"start": "nodemon --env-file=.env index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-		"dotenv": "^16.4.5",
+		"bcrypt": "^5.1.1",
 		"express": "^4.21.1",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.8.0",
 		"nanoid": "^5.0.8"
 	}
