--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
 	"dependencies": {
 		"bcrypt": "^5.1.1",
 		"cookie-parser": "^1.4.7",
+		"date-fns-tz": "^3.2.0",
 		"express": "^4.21.1",
+		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.10.0",
 		"mongoose": "^8.8.0",
