--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,18 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"@joi/date": "^2.1.1",
 		"bcrypt": "^5.1.1",
+		"cloudinary": "^2.5.1",
 		"cookie-parser": "^1.4.7",
 		"date-fns-tz": "^3.2.0",
 		"express": "^4.21.1",
 		"joi": "^17.13.3",
+		"joi-html-input": "^2.0.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.10.0",
 		"mongoose": "^8.8.0",
+		"multer": "^1.4.5-lts.1",
 		"nanoid": "^5.0.8"
 	}
 }
