--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.21.1",
 		"joi": "^17.13.3",
 		"joi-html-input": "^2.0.1",
+		"joi-objectid": "^4.0.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.10.0",
 		"mongoose": "^8.8.0",
