--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon --env-file=.env index.js"
+		"start": "node index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,6 +16,7 @@
 		"bcrypt": "^5.1.1",
 		"cloudinary": "^2.5.1",
 		"cookie-parser": "^1.4.7",
+		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"express": "^4.21.1",
 		"joi": "^17.13.3",
