--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
 		"mongodb": "^6.10.0",
 		"mongoose": "^8.8.0",
 		"multer": "^1.4.5-lts.1",
-		"nanoid": "^5.0.8"
+		"nanoid": "^5.0.8",
+		"stripe": "^17.4.0"
 	}
 }
