--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^5.2.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
